tests/invalid_inputs/sema/class_method_forward_declaration.cpp
// c+- currently doesn't support this

struct S {
	// error: class methods cannot be forward declared
	int foo();
}
